# chat_app

./: .env  .gitignore  Cargo.toml
migrations/: 20250830061833_init.sql
src/: db.rs  main.rs
src/handlers/: message_handler.rs  mod.rs  room_handler.rs  user_handler.rs  ws_handler.rs
src/models/: attachment.rs  message.rs  mod.rs  room.rs  user.rs
src/repository/: message_repository.rs  mod.rs  room_repository.rs  user_repository.rs
src/routes/: mod.rs  room_routes.rs  user_routes.rs  ws_routes.rs
